<resources>
    <string name="app_name">Bio.lap</string>
    <string name="politica">Políticas de seguridad</string>
    <string name="titulo1">Inicio de sesión</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="contrasena">Contraseña</string>
    <string name="name">Usuario</string>
    <string name="caja_contrasena">Ingrese la contraseña</string>
    <string name="caja_usuario">Ingrese el nombre de usuario</string>
    <string name="cambio_contrasena">¿Olvidó su contraseña?</string>
    <string name="nuevo_registro">Registrar usuario</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="caja_usuario2">Ingrese un nombre de usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="caja_correo">Ingrese un correo electrónico</string>
    <string name="repetir_contra">Repetir la contraseña</string>
    <string name="caja_contra">Ingrese una contraseña</string>
    <string name="check">Acepto los términos y condiciones</string>
    <string name="guardar">Listo</string>
    <string name="menu">Menú principal</string>
    <string name="bienv">¡Bienvenido/a!</string>
    <string name="user">User</string>
    <string name="nomen">Nomenclaturas</string>
    <string name="buscNom">Buscador</string>
    <string name="ingreso_pacientes">Ingreso de pacientes</string>
    <string name="nombre_paciente">Ingrese el nombre completo del paciente</string>
    <string name="edad_paciente">Ingrese la edad del paciente</string>
    <string name="obra_social">Ingrese la obra social del paciente</string>
    <string name="dni_paciente">Ingrese el DNI del paciente</string>
    <string name="telefono_paciente">Ingrese el N° telefonico del paciente</string>
    <string name="medico">Ingrese el nombre del medico</string>
    <string name="fecha">Fecha</string>
    <string name="sig">Siguiente</string>
    <string name="cod">Seleccione la rutina</string>
    <string name="ajuste">Ajustes</string>
    <string name="cambiarN">Cambiar nombre de usuario</string>
    <string name="cambiarC">Cambiar correo electrónico</string>
</resources>